Fixed spacing but still unresponsive

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -59,18 +59,15 @@ body{
 .lower-nav nav ul{
 	display:grid;
 	grid-template-columns: 1fr 3fr 1fr;
-	border: 2px solid black; 
+	padding: 0;
  }
 .lower-nav li{ border: 2px solid black;
-	/*margin: 10px 10px;*/
-	/*padding: 10px 10px;*/
+	margin: 10px 10px;
+	padding: 10px 10px;
 	font-family: helvetica;
 	background-color: grey;
-
-
 }
  .lower-nav{
- 	border: 5px dotted black;
 	font-size: 30px;
 	background-color: #ed6268;
 	text-align: center;
